--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -8,9 +8,12 @@ ja:
     attributes:
       user:
         id: ID
-        nickname: 名前
+        nickname: ニックネーム
+        username: ユーザーネーム
+        introduction: 自己紹介
+        crop: 育てている作物
         email: メールアドレス
-        file: 画像
+        image: 写真
         crypted_password: パスワード
         password: パスワード
         created_at: 作成日
